kubernetes/templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: <pod-name>
  namespace: <namespace>
  labels:
    app: <app-name>
spec:
  containers:
    - name: <container-name>
      image: <image>:<tag>
      ports:
        - containerPort: <container-port>
          protocol: TCP
