kubernetes/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: <statefulset-name>
  namespace: <namespace>
  labels:
    app: <app-name>
spec:
  serviceName: <headless-service-name>
  replicas: 3
  selector:
    matchLabels:
      app: <app-name>
  template:
    metadata:
      labels:
        app: <app-name>
    spec:
      containers:
        - name: <container-name>
          image: <image>:<tag>
          ports:
            - containerPort: <container-port>
  # Uncomment when persistent storage is required:
  # volumeClaimTemplates:
  #   - metadata:
  #       name: <volume-name>
  #     spec:
  #       accessModes: ["ReadWriteOnce"]
  #       storageClassName: <storage-class>
  #       resources:
  #         requests:
  #           storage: 1Gi
