kubernetes/templates/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: <endpointslice-name>
  namespace: <namespace>
  labels:
    kubernetes.io/service-name: <service-name>
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: <port>
endpoints:
  - addresses:
      - <ip-address>
    conditions:
      ready: true
