kubernetes/templates/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: <service-name>
  namespace: <namespace>
spec:
  type: LoadBalancer
  selector:
    app: <app-name>
  ports:
    - name: http
      port: 80
      targetPort: <container-port>
      protocol: TCP
  # Optional MetalLB example:
  # annotations:
  #   metallb.io/loadBalancerIPs: <load-balancer-ip>
