kubernetes/templates/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: <service-name>
  namespace: <namespace>
spec:
  type: NodePort
  selector:
    app: <app-name>
  ports:
    - name: http
      port: 80
      targetPort: <container-port>
      nodePort: <node-port>
      protocol: TCP
