kubernetes/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: <ingressroute-name>
  namespace: <namespace>
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`<host>`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: <service-name>
          port: 80
  # Uncomment when using TLS:
  # tls:
  #   secretName: <tls-secret-name>
